plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.12'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'


java {
    sourceCompatibility = '17'
}
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    // spring security
    implementation "org.springframework.boot:spring-boot-starter-security"
    implementation "org.springframework.security:spring-security-test"


    // oauth 2.0
    implementation("org.springframework.boot:spring-boot-starter-oauth2-client")
    // webflux
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"


    implementation "io.netty:netty-resolver-dns-native-macos:4.1.86.final:osx-aarch_64"

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'

    // jwt
    implementation 'io.jsonwebtoken:jjwt:0.9.1'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'

    // gson
    implementation 'com.google.code.gson:gson:2.8.9'

    // redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'


    implementation 'io.netty:netty-resolver-dns-native-macos:4.1.68.Final:osx-aarch_64'

    // admin SDK
    implementation 'com.google.firebase:firebase-admin:9.1.1'

    // s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

}

jar {
    enabled = false
}

tasks.named('test') {
    useJUnitPlatform()
}

